# lvgl-beaglebone-ui

./: .gitignore  CMakeLists.txt  lv_conf.h
src/: main.c
src/platform/fbdev/: platform_fbdev.c
src/platform/sdl/: platform_sdl.c
src/ui/: ui.c
